--- a/style.css
+++ b/style.css
@@ -1,15 +1,27 @@
+body {
+    font-family: 'Helvetica', sans-serif;
+    background-color: lightblue;
+}
+a, a:visited, a:active {
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+}
 section {
     text-align: center;
+    padding: 2rem;
 }
 .bio {
     background-color: pink;
 }
 .bio p, .contact ul {
     text-align: left;
+    line-height: 1.5rem;
 }
 img {
     max-width: 500px;
 }
 .contact {
-    background-color: lightgray;
+    background-color: lightblue;
 }
