--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body {
     font-family: 'Helvetica', sans-serif;
     background-color: lightblue;
 }
+.center {
+    text-align: center;
+}
 a, a:visited, a:active {
     text-decoration: none;
 }
@@ -14,13 +17,19 @@ section {
 }
 .bio {
     background-color: pink;
+    max-width: 75%;
+    margin: 0 auto;
+}
+div {
+    max-width: 85%;
+    margin: 0 auto;
 }
 .bio p, .contact ul {
     text-align: left;
     line-height: 1.5rem;
 }
 img {
-    max-width: 500px;
+    max-width: 60%;
 }
 .contact {
     background-color: lightblue;
